Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -35,7 +35,7 @@
  LEDGER_SHIPDUR:0 "耐久性"
  LEDGER_NT:0 "伝統"
  DEV_MAKE_STATE:0 "$VAL|Y$¤1で"
- PROV_MAKE_STATE:0 " $COLOR$$PROV$/$SIZE$¤2§!"
+ PROV_MAKE_STATE:0 " $COLOR$$PROV$/$SIZE$¤2§!"
  MAKE_STATE_TOO_MANY:0 "さらに$AMOUNT|Y$のテリトリーも…"
  REGCAT_normal:0 "正規兵"
  REGCAT_mercenary:0 "傭兵"
@@ -1042,7 +1042,7 @@
  TERRAIN_COMBAT_PENALTY:0 "攻撃側のダイスロール：$VAL$\n"
  TACTICS_DIFFERENCE:0 "戦術の差：$VAL$"
  TECH_GROUP_INFO:0 "技術は§Y$VAL$%§!の君主点追加コストがかかります。"
- TECH_GROUP_INFO_POWER:0 " さらに月間君主力が§R$VAL$§!減少します。"
+ TECH_GROUP_INFO_POWER:0 " さらに月間君主力が§R$VAL$§!減少します。"
  HARSH_EXPLAIN_BUY:0 "§Y$POINTS$§W£mil£を消費して$NAME$での反乱軍蜂起の確率を低減します。"
  CHANGE_CULTURE_EXPLAIN_BUY:0 "§Y$POINTS$§W£dip£を消費してこの州の文化を§Y$CULTURE$§!へ転向します。"
  CUL_TIME_MONTHS:1 "文化転向に$MONTHS|Y$ヶ月かかります：\n$REASON$"
@@ -4829,7 +4829,7 @@
  NUM_OF_NON_TRIBUTARY_SUBJECTS:0 "従属国（非朝貢国）の数"
  alert_mission_can_be_completed_instant:1 "§Yミッション達成§!"
  alert_mission_can_be_completed_delayed:0 "一つ以上のミッションを達成することができます"
- COMPLETE_MISSION_PREFIX:1 "ミッション§Y$MISSION$§!を達成"
+ COMPLETE_MISSION_PREFIX:1 "ミッション§Y$MISSION$§!を達成済"
  CANNOT_COMPLETE_MISSION:0 "§Rこのミッションは達成不可：§!"
  DURATION_YEAR:0 "1年"
  DURATION_YEARS:0 "$NUM$年"
