--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1825,7 +1825,7 @@
  flavor_tur.EVTOPTA3363:0 "反乱軍を鎮圧し、戦争の準備を！"
  flavor_tur.EVTOPTB3363:0 "反乱軍に集中せよ"
  flavor_tur.EVTNAME3366:0 "王室の官僚機構の拡大"
- flavor_tur.EVTDESC3366:0 "スレイマン1世はおそらく、オスマン帝国の最も偉大なスルタンであった。カーヌーニー（立法帝）と呼ばれ、彼は地方のベイの力が強い中央政府によって抑制されなければならないことに気付いた卓越した統治者であった。したがって、彼はあらゆる立場にとって不評であった強力な王室の官僚機構を推進するために苦労することになった…"
+ flavor_tur.EVTDESC3366:0 "スレイマン1世はおそらく、オスマン帝国スルタンの中で最も偉大なスルタンであった。カーヌーニー（立法帝）と呼ばれ、彼は地方のベイの力が強い中央政府によって抑制される必要があることを認識していた、卓越した統治者であった。ゆえに、彼はあらゆる立場にとって不評であった強力な王室の官僚機構を推進するために苦労することになった…"
  flavor_tur.EVTOPTA3366:0 "王室の官僚を拡大する。"
  flavor_tur.EVTOPTB3366:0 "限定的な改革を行う。"
  flavor_tur.EVTOPTC3366:0 "王室の官僚を削減する。"
