--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1843,5 +1843,5 @@
  estate_regency_mod_desc_tt:0 "§Y後継者§!が即位するまで"
  HOLY_SITE_4336_DESC:0 "The Ateshgah of Baku is one of the most important Fire Temples of the Zoroastrianism. While technically in Surakhani, it is binded to the city of Baku since antiquity, as it was also called 'The Fires of Baguan' in reference to the city of Baku. The fire emerges directly from the surface and its flames burn perpetually, with ferocious strength. It is said that some 'fire worshipers' still live in the vicinity."
  HOLY_SITE_2212_DESC:0 "When the Khorezm fell to the muslim forces, some worshipers fled to India and founded a community in Sanjan, carrying a sacred fire with them. A silsila, or traditional link, was formed between this new community and the original one in Persia from where the name Sanjan came from. Since 1297, the fire has moved around, first to the Bahrot Caves, then to the village of Bansda and finally to Navsari."
- pegu_subject_ayu_tt:0 "\nIf we complete this mission while §YAyutthaya§! is a non-tributary subject, the following will also happen:"
- pegu_subject_lna_tt:0 "\nIf we complete this mission while §YLan Na§! is a non-tributary subject, the following will also happen:"
+ pegu_subject_ayu_tt:0 "\n§Yアユタヤ§!が朝貢国意外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
+ pegu_subject_lna_tt:0 "\n§Yラーンナー§!が朝貢国意外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
