--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -225,7 +225,7 @@
  swe_the_teutonic_order_bt:0 "§Y[GetPolandPLC]§!が§Y[Root.GetName]§!と同盟しており、[Root.GetName]の評価が§Y100§!以上であり、§Y東プロイセン§!と§Y西プロイセン§!の州を§Y5§!州以上自国で領有している。\n§Y[40.GetName]§!州を[Root.GetName]か自国の属国が領有している、もしくは§Y[GetPolandPLC]§!が領有しており、かつ、[Root.GetName]が§Y500.0§!¤以上所持している。"
  swe_swedish_pommerania_title:0 "ドイツの海岸線"
  swe_swedish_pommerania_desc:0 "バルト海で真の覇権を握るためには、自国の交易や安全保障を危険に晒す沿岸部など間違いなく存在しないようにせねばならない。しかし、現在、ポメラニア地域とメクレンブルク地域は外国の手中にあり、自国の不利益となるやもしれない。北ドイツでこれらの海岸線を領有している信頼に足る同盟国を見つけるか、あるいは自身の手で征服するか、いずれかをすべきだろう。"
- swe_swedish_pommerania_ct:1 "If we complete this mission through §YConquest§! then §Y[Root.GetName]§! gains claims on the §YLower Saxony§! and §YWeser§! areas, and gets '§YThe Conquest of Pomerania§!' for §Y25 years§!, giving the following effects:\nCore-Creation Cost: §G-10.0%§!\n\nIf we complete this mission through §YDiplomacy§! then §Y[Root.GetName]§! §Rloses§! the permanent claims on the §YMecklenburg§!, §YVorpommern§! and §YHinterpommern§! areas (with the exception of the province §Y[45.GetName]§!), but gets §G100§! Diplomatic Power, §G50§! Favors with the Ally who completes the mission, and '§YGermanic Alliance§!' for §Y25 years§!, giving the following effects:\nMonthly Favor Modifier: §G+25.0%§!\nDiplomatic Reputation: §G+1.00§!"
+ swe_swedish_pommerania_ct:1 "本ミッションを§Y征服§!で達成した場合、§Y[Root.GetName]§!は、§Yニーダーザクセン§!地域、§Yヴェーザー§!地域に請求権を獲得します。また、「§Yポメラニアの征服§!」補正を獲得し、§Y25年間§!、以下の効果を得ます：\n中核州作成コスト：§G-10.0%§!\n\n本ミッションを§Y外交§!で達成した場合、§Y[Root.GetName]§!は§Yメクレンブルク§!地域、§Yフォアポンメルン§!地域、§Yヒンターポンメルン§!地域（ただし、§Y[45.GetName]§!州は除く）への恒久的な請求権を§R喪失§!しますが、外交点を§G100§!、ミッション達成した同盟国との好感度§G50§!を獲得します。また、「§Yドイツ人との同盟§!」補正を獲得し、§Y25年間§!、以下の効果を得ます：\n月間好感度補正：§G+25.0%§!\n外交評判：§G+1.00§!"
  swe_bane_of_the_hansa_title:0 "ハンザの破滅のもと"
  swe_bane_of_the_hansa_desc:0 "ハンザはバルト海の主役だ。北ドイツからの交易の流れを管理し、バルト海全域の光景をしっかりと握っている。さらには、デンマークと神聖ローマ帝国間で多くの戦争を引き起こし、自国に間接的な損害をもたらした。この商人どもに、バルト海における自分たちの本当の居場所を思い出させる時だ。"
  swe_bane_of_the_hansa_trade_tt:0 "スウェーデンの交易支配"
@@ -2024,7 +2024,7 @@
  flavor_teu.42.t:0 "チュートン騎士団の状況"
  flavor_teu.42.desc:1 "ドイツ貴族の騎士であるチュートン騎士団は、現地部族をキリスト教化するためにバルト海沿岸部に設立されました。この使命は数十年前に達成されましたが、我々は古プロイセン人の土地に留まり、ここを自国の拠点にすることを決めましたーしかし、ポーランドは大変不満に思っています。この40年で、私たち騎士団はポーランドとその同盟国に対して4度戦争をしました。これらの戦争結果からの直近の挫折の結果、プロイセンの豊かな都市は私たちの権威に対して陰謀を企てています。プロイセン同盟の脅威が迫っていて、この脅威に対して早急に対処しなければならないでしょう...\n\nしかし、すべてが悲観的であるわけではありません。チュートン騎士団は今、将来の岐路に立っているのです。もし私たちがポーランドの脅威を打ち破ることができれば、私たち騎士団は新たな道を 選ぶことができるでしょう。"
  flavor_teu.42.a:0 "私たちに何が起こるか教えてれるのは時間だけです。"
- flavor_teu.42.a.tt:0 "The §YTeutonic Order§! has a unique mission tree, which is highly flexible. After finishing the mission '§YDefeat Poland§!' we will receive an event, which allows the replacement of the Branching Missions with missions from one of the two following paths:\n\n§YPrussian Path§!\nThe Prussian Path is one about secularizing and dissolving the Teutonic Order, and reforming into the nation of §YPrussia§!. It will revolve around maintaining one of the strongest armies of history, as well as expanding the development of the Prussian lands. It will also lead into a new branching path, which will let you decide if you want to do the §YDiplomacy of the HRE§!, §YExpand into Germany§! and unify the Germans or §YForge your own Fate§! as the Kingdom of Prussia in Poland and Ruthenia.\n\n§YCrusader Path§!\nThe Crusader Path is one about sticking to the purpose of the Order, which is the Christianizing of Heathens and Heretics. Your mission tree will lead you on a campaign of conquest and coversion of §YEastern Europe§! as well as the §YSteppes of Central Asia§!."
+ flavor_teu.42.a.tt:0 "§Yチュートン騎士団§!には独自のミッションツリーがあり、自由度の高いミッションとなっています。ミッション「§Yポーランドの打倒§!」を達成するとイベントが発生し、分岐ミッションを以下の2つの経路のいずれかのミッションに置き換えることができます。\n\n§Yプロイセンルート§!\nプロイセンルートとは、チュートン騎士団を世俗化して解散させ、§Yプロイセン§!という国家に変態するルートです。それは歴史上最強の軍隊を保持すると同時に、プロイセン領の発展拡大を中心に展開するルートです。また、新しい分岐ルートに通じるルートもあり、そのルートでは、あなたがもし望めば、§YHREとの外交§!、§Yドイツへの拡張§!、ドイツの統一もしくポーランド及びルテニア内でプロイセン王国として§Y自身の運命を築く§!といった選択をあなたが決めることができます。\n\n§Y十字軍ルート§!\n十字軍ルートは、騎士団の本来の目的から外れないルートで、異教徒や異端者をキリスト教化していきます。あなたのミッションツリーは、§Y東ヨーロッパ§!及び§Y中央アジアののステップ§!の征服と改宗の遠征にあなたを導きます。"
  flavor_teu.43.a.tt:0 "私たちは§Yチュートン騎士団§!の神聖ローマ帝国への加盟を無条件で受け入れます。\n帝国領邦である騎士団の近隣諸国は、この選択に脅威を感じるかもしれません。\n\n神聖ローマ帝国領邦である§Y[TEU.GetName]§!の隣国全ては、§Y[Root.GetName]§!の評価を§R150§!失います。"
  flavor_teu.44.t:0 "チュートン事件"
  flavor_teu.44.desc:0 "私たちは、皇帝の合意のみで神聖ローマ帝国に加盟しました。しかし、現在、私たちと国境を接する多くのドイツ諸国は、私たちの存在を脅威に感じており、神聖ローマ帝国全域に注意を払い、私たちの存在に対処するよう要求しています。"
@@ -2404,7 +2404,7 @@
  desc_liv_united_orders:0 "チュートン騎士団の騎士たちは、リヴォニア騎士団の旗の下に統一された。"
  flavor_liv.0.t:0 "リヴォニア騎士団の状況"
  flavor_liv.0.desc:1 "リヴォニア騎士団は1236年にジェマイティヤ人によって壊滅した騎士団、リヴォニア帯剣騎士団の後継にあたる騎士団です。厳密に言うとチュートン騎士団に従属していますが、リヴォニア騎士団はほぼ自立を保ったままとなっています。\nしかし、我が騎士団にはそれなりに困難があります。カルマル同盟－非常に飢えた北方の獅子－は自国の平定を狙っています。ポーランド人と同盟していて裏で支えているリトアニア人はバルト領を併合しようとし、自国の東にいるノヴゴロド人は西への拡張を考えています。\nしかし、それだけではありません。1435年、司教たちはリガの支配下にリヴォニア連盟を結成し、自身の利益のために貴重な資源を私たちから遠ざけ始めました。\n\nしかし、全てを悲観することはありません。時代は変わり、リヴォニア騎士団は運命の岐路に立っています。この連盟を終わらせ、敵を押し返すことができれば、自国はどのような道を歩むべきかを選択できるのです。"
- flavor_liv.0.a.tt:1 "The §YLivonian Order§! has a unique mission tree, which is more flexible than other mission trees. After finishing the mission '§YStrengthen Our Authority§!' we will receive an event, which allows us to replace the Branching Missions with missions from one of the two following paths:\n\n§YLivonian Path§!\nThe Livonian Path is one about secularizing and dissolving the Livonian Order, and reforming into the nation of §YLivonia§!. It will revolve around the development of the §YBaltic§! region and the colonization of the §YNew World§!. It will also allow us to form our own §YGovernment§!, which is forged by our needs and actions.\n\n§YCrusader Path§!\nThe Crusader Path is one about sticking to the purpose of the Order, which is the Christianizing of Heathens and Heretics. Your mission tree will lead you on a campaign of conquest and coversion of §YRussia§! and establishing a Catholic Empire in §YEastern Europe§!."
+ flavor_liv.0.a.tt:1 "§Yリヴォニア騎士団§!には独自のミッションツリーがあり、他のミッションツリーに比べて多岐に渡るルートになっています。ミッション「§Y自国の権威の強化§!」を達成するとイベントが発生し、分岐ミッション部を以下の2ルートの内、どちらかのミッションに置き換えることになります。\n\n§Yリヴォニアルート§!\nリヴォニアルートではリヴォニア騎士団を世俗化、解体し、§Yリヴォニア§!国家へと改革していくルートになります。このルートは§Yバルト§!地方の開発と§Y新世界§!への入植を中心に展開します。また、自身のニーズや行動によって強化内容が変わる、独自§Y政府§!を作り上げることができます。\n\n§Y十字軍ルート§!\n十字軍ルートでは、異教徒や異端をキリスト教化するという騎士団の目的に忠実に実行していくルートになります。本ミッションツリーでは、§Yロシア§!の征服及び改宗を目的とした軍事作戦を起こし、§Y東ヨーロッパ§!でのカトリック帝国の樹立にあなたを誘うことでしょう。"
  flavor_liv.1.t:0 "リヴォニア騎士団の未来"
  flavor_liv.1.desc:0 "私たち騎士団はリヴォニア連盟を何とか抑えこみ、未来を守りました。しかし、私たち騎士団が正しき道を見失っていることは明らかです。新時代の夜明けは近づいており、今や自国の方向性をどうするか、これまで以上に選択する時なのです。"
  flavor_liv.1.a:0 "十字軍の時代は終わった。世俗化された領国となるのだ！"
@@ -4512,7 +4512,7 @@
  liv_heal_the_schism_bt:0 "§Yロシア§!にある州で§Yカトリック§!である。"
  flavor_liv.20.b.tt:0 "領有するステート州はすべて、自治率が§R20§!増加します。"
  flavor_liv.20.c.tt:0 "領有するステート州はすべて、自治率が§G-20§!されます。"
- got_pirate_raid_the_baltics_at:0 " §Yバルト海§!の沿岸州を§Y[Root.GetName]§!が領有しているか、もしくは§Y襲撃された§!状態である。"
+ got_pirate_raid_the_baltics_at:0 " §Yバルト海§!の沿岸州を§Y[Root.GetName]§!が領有しているか、もしくは§Y襲撃された§!状態である。"
  mechanic_centralize_state_half_refund_yes:0 "§Yステートの集権化§!の費用は§G50%§!返還される"
  mechanic_enforced_interfaith_dialogue_buff_yes:0 "階級特権「§Y宗教間対話の強制§!」は聖職者の忠誠度と最大絶対主義の減少を招かなくなります。"
  mechanic_buffed_monastic_temples_yes:0 "階級特権「§Y修道会の寺院§!」は3から§Y5のカルマ§!を付与もしくは削除する\nさらに、年間カルマ減少§G+0.03§!も付与され、影響力の増大や最大絶対主義が減少しなくなる。"
@@ -4853,5 +4853,5 @@
  LIV_preview_livonian:0 "「§Oリヴォニア§!」ミッションツリーをプレビュー表示します。"
  LIV_preview_crusader:0 "「§O十字軍§!」ミッションツリーをプレビュー表示します。"
  ADD_ACCEPTED_CULTURE_SLOT_LIMITATION_TT:0 "§Y文化§!が既に§Y受容文化§!であるか、十分な§Yスロット§!がない場合には、代わりに§G100§!外交点を得ます。"
- swe_germanic_alliance:0 "Germanic Alliance"
- desc_swe_germanic_alliance:0 "The diplomatic ties between Sweden and the Germanic states grows closer due to our support in their expansion."
+ swe_germanic_alliance:0 "ドイツ同盟"
+ desc_swe_germanic_alliance:0 "スウェーデンとドイツ系国家の外交関係は、彼らの拡大に対する自国の支援によって緊密なものとなった。"
