--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -435,7 +435,7 @@
  CONFIRM_GRANT_PRIVILEGE_DESC:2 "$PRIVILEGE|Y$の特権を$ESTATE|Y$に与えてもよろしいですか？\nこれには$COST|0Y$£adm£が必要です。\n\n$EFFECT$"
  CONFIRM_GRANT_PRIVILEGE_DESC_NO_COST:1 "$PRIVILEGE|Y$の特権を$ESTATE|Y$に与えてもよろしいですか？\n\n$EFFECT$"
  CONFIRM_REVOKE_PRIVILEGE_DESC:6 "$ESTATE|Y$の$PRIVILEGE|Y$の特権を取り消してもよろしいですか？\n\n$EFFECT$この特権を取り消すと階級の忠誠度は$VAL|+=0%$変化します。"
- ALL_ESTATE_LAND_SHARE_CHANGES:0 "階級の支配する領土が変化する：\n$CHANGE$"
+ ALL_ESTATE_LAND_SHARE_CHANGES:0 "階級の支配領土が変動：\n$CHANGE$"
  CONFIRM_CROWN_LAND_INTERACTION:1 "$TITLE$の確認"
  CONFIRM_CROWN_LAND_INTERACTION_DESC:2 "直轄地に以下の変更を加えますか：\n$EFFECT$"
  CROWN_INTERACTION_COST:0 "$COST$のコストがかかります。"
