--- a/source/localisation/goose_1_36_l_english.yml
+++ b/source/localisation/goose_1_36_l_english.yml
@@ -28,12 +28,12 @@
  ADD_GARRISON_EFFECT:0 "$PROVINCE$が守備隊を$AMOUNT|0$獲得します。"
  HAS_MOD_ACTIVE:0 "MOD $MOD$ が有効である。（有効：$ACTIVEMODS$）"
  DISALLOWED_DEATH_INHERITANCE:0 "§Rこのタイプの従属国は継承が許可されていません。§!"
- HRE_VOTE_INELIGIBLE_GOVERNMENT:0 "§R-$COUNTRY$ has wrong government type.§!"
+ HRE_VOTE_INELIGIBLE_GOVERNMENT:0 "§R-$COUNTRY$ は政体が違います。§!"
  AUTOMATIC_MISSIONARY_TITLE:1 "自律行動："
  AUTOMATIC_MISSIONARY_TOOLTIP:1 "この宣教師は自律的に働いています。改宗速度が0%を越えている不適切な宗教の州を、速度が速い順に改宗していきます。\n§Y右/左クリックで削除。§!"
  cossacks_regiment:0 "コサック連隊"
  rajput_regiment:0 "ラージプート連隊"
- PERMANENTLY_LEFT_HRE:0 "§R-Permanently left the Holy Roman Empire§!"
+ PERMANENTLY_LEFT_HRE:0 "§R-神聖ローマ帝国から永久離脱します§!"
  PI_GRANTS_SCALED:0 "さらに以後$DURATION|Y$年間、§Y$ESTATE$の影響力§!に比例して：\n$MOD$"
  PI_GRANTS_ENACTED:0 "$DATE|Y$まで、$COUNTRY|Y$は以下を得ます：\n$MOD$"
  PI_GRANTS_SCALED_ENACTED:0 "$DATE|Y$まで、$COUNTRY|Y$は§Y$ESTATE$の影響力§!に比例して以下を得ます：\n$MOD$"
@@ -145,4 +145,4 @@
  CULT_REMOVED_EFFECT:0 "このカルトを外した場合の影響：\n$EFFECT$"
  HEGEMONY_GAINED_EFFECT:0 "この覇権を獲得した場合の影響：\n$EFFECT$"
  HEGEMONY_LOST_EFFECT:0 "この覇権を喪失した場合の影響：\n$EFFECT$"
- ADVISOR_MORE_EXPENSIVE:0 "This advisor is $AMT$ more expensive for your country to employ."
+ ADVISOR_MORE_EXPENSIVE:0 "この顧問は、あなたの国家にとって$AMT$分だけ雇用コストが高い。"
