Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -90,7 +90,7 @@
  icon_pancreator:0 "全能者ハリストスの聖像"
  desc_icon_pancreator:1 "全能者ハリストスは穏やかでしかし厳格な、力強さに満ちたハリストスを描いている。これは教会の中で最も人気のある宗教画の一つであり、しばしば教会の中央ドームの内側に描かれているのを見ることができる。"
  icon_nicholas:0 "聖ニコラオスの聖像"
- desc_icon_nicholas:1 "奇跡を行う人、あるいは贈り物を運ぶ人、聖ニコラオスはキリスト教の最古の聖人の一人であり、聖像においては多くが白いひげを蓄えた高齢の男性として表現される。"
+ desc_icon_nicholas:1 "奇跡を行う人、あるいは贈り物を運ぶ人、聖ニコラオスはキリスト教の最古の聖人の一人であり、聖像においては多くが白いひげを貯えた高齢の男性として描かれている。"
  icon_climacus:0 "階梯者聖イオアンの聖像"
  desc_icon_climacus:1 "『天国への階梯』の著者である、聖ヨアンネス・クリマコスは、禁欲主義と敬虔な人生を神に向けて努力する方法を記述し、正教会のキリスト教徒の人々にひらめきを与えてきた。"
  RUSABIL_SUDEBNIK:0 "スジェブニク改革"
@@ -1174,10 +1174,10 @@
  desc_state_controlled_guilds:0 "国家が様々なギルドを支配できるようにすることで、我々の収入は増加した。"
  LAND_MAINT_IRO:0 "維持費コストに対する補正：\n$TXT$"
  MERC_MAINT_IRO:0 "傭兵の維持には以下の要因により§Y$VAL$%§!のコストがかかります：\n$TXT$"
- NAVY_TRADITION_IRO:0 "海軍の伝統は以下の要因により毎年$VAL|+$変化します：\n"
- NAVY_TRADITION_DRO:0 "海軍の伝統は、あなたの国家で蓄積された海軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
- ARMY_TRADITION_IRO:0 "陸軍の伝統は以下の要因により毎年$VAL|+$変化します：\n"
- ARMY_TRADITION_DRO:0 "陸軍の伝統は、あなたの国家で蓄積された陸軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
+ NAVY_TRADITION_IRO:0 "海軍伝統は以下の要因により毎年$VAL|+$変化します：\n"
+ NAVY_TRADITION_DRO:0 "海軍伝統は、あなたの国家で蓄積された海軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
+ ARMY_TRADITION_IRO:0 "陸軍伝統は以下の要因により毎年$VAL|+$変化します：\n"
+ ARMY_TRADITION_DRO:0 "陸軍伝統は、あなたの国家で蓄積された陸軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
  CURRENT_EFFECTS:0 "§Y現在の効果§!"
  TRADE_THROUGH_TT:1 "$WHO$は交易ノード§Y$WHERE$§Wに属し、最も近い我々の中核州から$COL$$RANGE$§!の距離にあります。\n$POWER$"
  TRADE_POWER_MAP_TT_EXPL:0 "ノードに州の§Y$PERC$%§!にあたる$VAL$の交易力をもたらします。"
@@ -1288,8 +1288,8 @@
  MIL_UPKEEP_EXPLANATION:0 "$CURR$/$ALLOW$の指揮官：$COST$"
  inverse_republican_tradition:0 "共和的伝統の欠如"
  republican_tradition:0 "共和的伝統"
- army_tradition:0 "陸軍の伝統"
- navy_tradition:0 "海軍の伝統"
+ army_tradition:0 "陸軍伝統"
+ navy_tradition:0 "海軍伝統"
  MIL_DEFENSIVENESS:0 "防衛"
  POOL_HAS_MP:0 "募兵を待っている兵士が§Y$POOL$§!人いるため、人的資源プールが§Y$MAX$§!人より大きくなることはありません。"
  YEARLY_MERITOCRACY:0 "年間能力主義"
