--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -653,9 +653,9 @@
  CALL_COLONIAL_ALLIES:0 "従属国への参戦要請"
  FULL_ALLY_CHECKBOX_WILL_AUTOJOIN:2 "敵国の$SUBJECTORALLY$§Y$COUNTRY$§!はこの戦争で防衛側として参戦しますが、その同盟国に参戦要請することはできません。"
  FULL_ALLY_CHECKBOX_WILL_CALL:1 "$SUBJECTORALLY$§Y$COUNTRY$§!はこの戦争で共戦国と見なされます。この国は同盟国に参戦要請することができます。"
- FULL_ALLY_CHECKBOX_WILL_NOT_CALL:1 "$SUBJECTORALLY$§Y$COUNTRY$§!はこの戦争で共戦国と見なされません。この国は同盟国に参戦要請することができませんが、州を得るためには二倍の戦勝点が必要です。"
+ FULL_ALLY_CHECKBOX_WILL_NOT_CALL:1 "$SUBJECTORALLY$§Y$COUNTRY$§!はこの戦争で共戦国と見なされません。この国は同盟国に参戦要請することができませんが、州を得るためには2倍の戦勝点が必要です。"
  FULL_ALLY_CHECKBOX_DESC:1 "§G$SUBJECTORALLY$を共戦国と見なすかどうかを切り替えます。§!"
- NOT_COBELLIGERENT_CALL:0 "通常の同盟国として参戦します。敵が我が州を獲得するには二倍の戦勝点が必要になりますが、我が国が同盟国に参戦要請することはできません。"
+ NOT_COBELLIGERENT_CALL:0 "通常の同盟国として参戦します。敵が我が州を獲得するには2倍の戦勝点が必要になりますが、我が国が同盟国に参戦要請することはできません。"
  COBELLIGERENT_CALL:0 "我が国は共戦国として参戦し、我が国の同盟国に参戦を要請することができます。"
  CALL_PROMISE_LAND:0 "§G我が国が了承すれば、彼らはこの戦争で我が国に領土を獲得させることを約束します。§!"
  DIPLOMACYACTION_ACCEPT:0 "彼らはきっと受諾するでしょう！"
@@ -705,7 +705,7 @@
  POWER_COST_RIVAL:0 "ライバル国から獲得：$VAL$\n"
  VASSAL_CANCEL_CONFIRM:0 "$VASSAL|Y$の属国化を中止しますか？"
  VASSAL_CANCEL_PRESTIGE:0 "\n威信$PRESTIGE|R$を消費します。"
- VASSAL_CANCEL_OPINION:0 "\n彼らは忠実であるため、我が国に対する評価が$OPINION|R$減少します。"
+ VASSAL_CANCEL_OPINION:0 "\n彼らは忠実であるため、我々への評価が$OPINION|R$減少します。"
  VASSAL_CANCEL_CORES:0 "\n我が国が彼らの州に持つ全ての中核州と請求権を失います。"
  PROTECTORATEBREAKDESC:0 "保護国$COUNTRY$との主従関係を破棄しますか？\nこれにより安定度が§Y$STAB$§!、威信が$PRESTIGE|R$減少し、関係が悪化します。"
  PEACE_OFFER_POWER_COST:0 "この講和で$WHO$は$COST|Y$£dip£を払うことになります。"
@@ -722,7 +722,7 @@
  REMOVE_ELECTORATE_TITLE:0 "選帝候位を剥奪する"
  REMOVE_ELECTORATE_DESC:0 "選帝候を取り消すと皇帝選挙で投票ができなくなります。"
  REMOVE_ELECTORATE_ADDITIONAL_EFFECTS:0 "さらに、他の選帝侯の我々への評価は、取り消された選帝侯と同じ宗教であれば$SAME$、それ以外の場合は$OTHER$変更されます。\n\nコストとして我々に§Y$IA$§!の帝国の権威が必要です。"
- OPINION_WOULDCHANGEBY:0 "彼らの評価が$AMOUNT$変化します。"
+ OPINION_WOULDCHANGEBY:0 "彼らの我々への評価が$AMOUNT$変化します。"
  DEMANDUNLAWFULTERRITORYTITLE:0 "不法な領土の返還を要求する"
  DEMANDUNLAWFULTERRITORYDESC:0 "不法な領土の帝国への返還を要求します。"
  DEMANDUNLAWFULTERRITORY_DERIVEDDESC:0 "不法な領土「$PROV|Y$」を神聖ローマ帝国に返還するよう要求します。"
@@ -743,7 +743,7 @@
  REVOKEGUARANTDESC2:0 "停戦協定を結ぶことになるため、彼らを攻撃するためにこれを使うことはできません。"
  GRANTELECTORATEREQDESC:0 "$ACTOR$より神聖ローマ帝国の選帝候に指名されます。承諾すると次期皇帝を決める選挙で投票が可能になります。"
  GRANTFREECITYREQDESC:0 "$ACTOR$から神聖ローマ帝国の自由都市の地位の付与を提案されます。了承することにより政体が自由都市に変わり、皇帝が全ての侵略者から我々を保護するようになります。我々がより多くの州を獲得したり帝国を離脱した場合、自由都市の地位を失います。"
- DEMANDUNLAWFULTERRITORYREQDESC:0 "皇帝$ACTOR$は「$PROV|Y$」を神聖ローマ帝国に返還するよう要求します。この要求を拒否した場合、我々と神聖ローマ帝国の関係に深刻な影響を与えます。"
+ DEMANDUNLAWFULTERRITORYREQDESC:0 "皇帝$ACTOR$は「$PROV|Y$」を神聖ローマ帝国に返還するよう要求しています。この要求を拒否した場合、我々と神聖ローマ帝国の関係に深刻な影響を与えるでしょう。"
  DEMANDUNLAWFULTERRITORYREQDENYEFFECTS:0 "拒否した場合の影響：\n皇帝はあなたに対する開戦事由を得ます。\n州の影響：\n$PROVEFFECT$\n\n神聖ローマ帝国領邦から受ける評価補正：\n$OPINIONEFFECT$"
  TRANSFERTRADEPOWERDESC:0 "$ACTOR$は我が国の全ての交易ノードで産出する交易力の内$VAL|0%$を譲渡するよう求めています。これを了承しますか？"
  revoke_elector_opinion:0 "選帝候位を剥奪した"
