--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -2881,7 +2881,7 @@
  clerical_poverty_aspect:0 "聖職者の貧困"
  desc_clerical_poverty_aspect:0 "聖職者は富を持つべきでなく、彼らの物的な所有物を放棄するべきである。彼らは世俗の世界ではなく、神にその注意を向けるべきなのだ。"
  bread_and_wine_aspect:0 "パンとワイン"
- desc_bread_and_wine_aspect:0 "ウトラキストにとって、彼らとカトリック教会との間の主な教義上の不一致は、パンとワインの両方による聖餐の概念である。フス派の宗派は、一般の信者さえも、パンとワインの両方を含む聖餐だけが有効であると信じている。"
+ desc_bread_and_wine_aspect:0 "ウトラキストにとって、彼らとカトリック教会との間の主な教義上の不一致は、パンとワインの両方による聖餐の概念である。フス派の宗派は、平信徒さえも、パンとワインの両方を含む聖餐だけが有効であると信じている。"
  sola_scriptura_aspect:0 "聖書のみ"
  desc_sola_scriptura_aspect:0 "聖書は人に伝えられた神の言葉であり、キリスト教の教義の唯一の権威である。聖書の文言に基づかない全ての宗教的慣習は異端として糾弾されるべきだ。"
  adamite_services_aspect:0 "アダム派の礼拝"
