--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -424,8 +424,8 @@
  personality_events.51.b.tooltip:0 "§Y[Root.Monarch.GetTitle][Root.Monarch.GetName]§!の血への渇望は抑えられます…今のところは。"
  cruel_overlord:0 "残酷な君主"
  desc_cruel_overlord:0 "この州の人々は、彼らの君主によって残酷に処置され、不幸と不穏を大いに引き起こした。"
- personality_events.52.t:0 "十年の雇用"
- personality_events.52.d:0 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の対処は常に容易なものではない。[Root.Monarch.GetHerHis]の軽率な働きかけと完全な裁量の欠如は、長年にわたり、多くの人々を怒らせてきた。しかし、[Root.Monarch.GetName]の洗練さの欠如に感謝している人々の集団もある。[Root.Monarch.GetHerHisCap]の顧問は、我々の[Root.Monarch.GetTitle]が説得しやすく、どのような提案にも興奮することを認識している。彼らはとても満足しているので、我々は彼らの報酬をいくらか引き下げることができた。それはあたかも、我々が後ろに並んで待つ輝かしい後継者を持っていないようには思えない！"
+ personality_events.52.t:0 "十年の雇用者"
+ personality_events.52.d:0 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の対処は常に容易なものではない。[Root.Monarch.GetHerHis]の軽率なアプローチと慎重さの全欠如は、長年にわたり多くの人々を怒らせてきた。しかし、[Root.Monarch.GetName]の純真さを評価している人々もいる。[Root.Monarch.GetHerHisCap]の顧問は、我々の[Root.Monarch.GetTitle]が説得しやすく、ほとんどすべての提案に興奮することに気付いている。彼らはとても満足しているので、我々は彼らの報酬をいくらか引き下げることができた。優秀な候補者がたくさん並んでいないわけではない！"
  personality_events.52.a:0 "ちょっとした競争は、彼らをより懸命に働かせるだけだ！"
  naive_employer:0 "純真な雇用者"
  desc_naive_employer:0 "我が国の支配者は興奮しやすく、新しいアイデアのほとんどを試してみたいと思っており、顧問の間で人気がある。"
