--- a/source/localisation/startup_screen_l_english.yml
+++ b/source/localisation/startup_screen_l_english.yml
@@ -161,7 +161,7 @@
  string_start_trade_league:0 "£DLC_mn£[Root.GetName]の政府は§Y交易所§!を設置することができます。交易所がある§Y交易ノード§!では§Y交易力§!が増加します。ステート州が20を超えると、1州ごとに政府は共和的伝統を失います。\n\n£DLC_mn£小国家を§Y貿易同盟§!に招き、彼らに保護を与える代わりに交易力を得ます。\n貿易同盟は自国領土から交易都市を解放することでも強化できます。\n\n"
  string_start_parliaments:0 "£DLC_cs£[Root.GetName]の政府は重要事項の決定のために§Y議会§!の使用ができます。これは§Y君主§!が§Y議席§!のある州の支援を求めることができます。\n\n"
  string_start_prussian_government:2 "[Root.GetName]の政府は§Yプロイセン君主制§!です。これは全君主は§Y軍事君主能力§!が最低§Y3§!を保証されます。\n\n[Root.startup_government_prussian_dlc]"
- string_start_prussian_government_dlc:0 "£DLC_rom£プロイセン君主制には§Y軍国主義§!度があり、負の§Y安定度§!と正の§Y陸軍伝統§!、§Y正統性§!で上がり、とても有益な利益を広い範囲にわたって与えます。軍国化は持っている州の多さで決まり、より小さな国であればその値を高くとどめておくことができます。\n\n"
+ string_start_prussian_government_dlc:0 "£DLC_rom£プロイセン君主制には§Y軍事化§!レベルがあり、負の§Y安定度§!と正の§Y陸軍伝統§!、§Y正統性§!で上がり、とても有益な利益を広い範囲にわたって与えます。軍事化は持っている州の多さで決まり、より小さな国であればその値を高くとどめておくことができます。\n\n"
  string_start_elective_monarchy:0 "£DLC_rp£[Root.GetName]は§Y選挙君主制§!です。これは他国が自国の王朝が我が国の後継者となるよう§Y後継者候補への支援§!ができるものです。選挙君主制の王位は他国から請求をすることができないため、我が国が他国の§Y同君連合§!となることはありえません。\n\n"
  string_start_elective_monarchy_not_yet:0 "£DLC_rp£[Root.GetName]は§Y選挙君主制§!となることができます。これは他国が自国の王朝が我が国の後継者となるよう§Y後継者候補への支援§!ができるものです。選挙君主制の王位は他国から請求をすることができないため、我が国が他国の§Y同君連合§!となることはありえません。\n\n"
  string_start_horde:0 "£DLC_cos£我が国は遊牧国家です。国内の安定度は、時間と共に減少し、敵国の州の略奪や戦争で増加する§Y遊牧民の結束§!の値に影響されます。遊牧民の結束は大きな遊牧国家であるほどより急速に減少します。\n\n"
