--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -71,8 +71,8 @@
  WAREXHAUSTION_EFFECT:0 "戦争疲弊を$VALUE$$DIRECTION$\n"
  MANPOWER_EFFECT:0 "人的資源を$VALUE$$DIRECTION$\n"
  SAILORS_EFFECT:0 "水兵を$VALUE$$DIRECTION$\n"
- ARMYTRADITION_EFFECT:0 "陸軍の伝統を$VALUE$$DIRECTION$\n"
- NAVYTRADITION_EFFECT:0 "海軍の伝統を$VALUE$$DIRECTION$\n"
+ ARMYTRADITION_EFFECT:0 "陸軍伝統を$VALUE$$DIRECTION$\n"
+ NAVYTRADITION_EFFECT:0 "海軍伝統を$VALUE$$DIRECTION$\n"
  CAPITAL_CHANGE:0 "§Y$NEW$§Wが新しい首都になります。\n"
  POLICY_CHANGE:0 "$SLIDER$を$VALUE$$DIRECTION$\n"
  RELIGION_ENABLED:1 "$NEW|Y$が可能になりました。\n"
@@ -167,7 +167,7 @@
  building_mills:0 "製造所"
  building_furnace:0 "溶鉱炉"
  building_university:0 "大学"
- war_college:0 "将校養成学校"
+ war_college:0 "陸軍大学校"
  building_weapons:0 "武器工場"
  building_wharf:0 "海軍機器工場"
  workshop:0 "工房"
@@ -640,7 +640,7 @@
  RECRUIT_EXPLORER_DRO:0 "海軍ユニットの移動は通常、すでに探検されている海域に限定されています。しかし、探検家によって指揮される海軍ユニットは未開の地へ出ていくことができます。\n"
  RECRUIT_CONQUISTADOR_DRO:0 "陸上ユニットの移動は通常、探検済みの州に限定されています。征服者を採用することでより多くの陸地を探検し、あわよくば、その地域を帝国に加えられるでしょう。\n"
  RECRUIT_ADMIRAL_DRO:0 "提督は海上ユニットを指揮することができ、提督の能力は自国の海軍の伝統に依存します。\n"
- RECRUIT_GENERAL_DRO:0 "将軍は陸上ユニットを指揮することができ、将軍の能力は自国の陸軍の伝統に依存します。\n"
+ RECRUIT_GENERAL_DRO:0 "将軍は陸上ユニットを指揮することができ、能力は自国の陸軍伝統に依存します。\n"
  LANDMORALE_DRO:0 "基本は現在の技術から§Y$CURRENT$§Wです。\n"
  NAVALMORALE_DRO:0 "基本は現在の技術から§Y$CURRENT$§Wです。\n"
  ATTRITION_WEIGHT:0 "ユニットの重量は§Y$VALUE$§Wです"
@@ -1195,8 +1195,8 @@
  RECRUIT_EXPLORER:0 "探検家を雇用"
  RECRUIT_CONQUISTADOR:0 "征服者の雇用"
  RULER_TO_GENERAL:0 "支配者を将軍に変更"
- NAVY_TRADITION:0 "海軍の伝統"
- ARMY_TRADITION:0 "陸軍の伝統"
+ NAVY_TRADITION:0 "海軍伝統"
+ ARMY_TRADITION:0 "陸軍伝統"
  PRIMARYCULTURE:0 "我々の主要文化は§Y$CULTURE$§Wです。§Y$CULTURE$§Wは§Y$GROUP$§Wのグループです。"
  SECONDARYCULTURE:0 "$NAME$は以下の文化を受け入れます："
  CONFIRMSACKGMTITLE:0 "偉大な人物を解雇"
@@ -1916,8 +1916,8 @@
  alert_advisor_slot_delayed:0 "王国には、いつでも開発を形作るのに役立つ最大3人の顧問を配置できます。現在、宮廷には空席があり、埋めることで顧問が提供する能力を利用できます。\n\n現在の君主の能力：$LIST|R$"
  alert_loan_due_instant:0 "§Y借金中§!"
  alert_loan_due_delayed:0 "あなたは借金をしており、いつか返済する時が来ます。以下の借金は間もなく返済する必要があります：\n$LIST$"
- alert_army_tradition_high_no_general_instant:0 "§Y高い陸軍の伝統§!"
- alert_army_tradition_high_no_general_delayed:0 "陸軍の伝統は時間の経過とともに減少します。現在、優秀な将軍を雇用することができます。"
+ alert_army_tradition_high_no_general_instant:0 "§Y高い陸軍伝統§!"
+ alert_army_tradition_high_no_general_delayed:0 "陸軍伝統は時間の経過とともに減少します。現在、優秀な将軍を雇用することができます。"
  alert_navy_tradition_high_no_admiral_instant:0 "§Y高い海軍伝統§!"
  alert_navy_tradition_high_no_admiral_delayed:0 "海軍の伝統は時間の経過とともに減少します。現在、優秀な提督を雇用することができます。"
  incite_troop_desertion:0 "軍隊からの脱走を扇動"
@@ -2308,10 +2308,10 @@
  BUILDINGSLEDGER_BUILDINGS_MARKETPLACE_L:0 "市場は、人口の増加と州の交易収入の両方を向上させます。市場がある州には緑色のチェックが付きます。"
  BUILDINGSLEDGER_BUILDINGS_TAX_ASSESSOR_S:0 "税務署"
  BUILDINGSLEDGER_BUILDINGS_TAX_ASSESSOR_L:0 "税務署は、州内のインフレ率を減らします。緑色のチェックは、税務署がすでに存在することを表しています。"
- BUILDINGSLEDGER_BUILDINGS_WAR_COLLEGE_S:0 "将校養成学校"
- BUILDINGSLEDGER_BUILDINGS_WAR_COLLEGE_L:0 "将校養成学校は、陸軍の伝統を毎年増加させます。将校養成学校は海軍本部のある州には建設できません。緑色のチェックは、将校養成学校のある州を表しています。"
+ BUILDINGSLEDGER_BUILDINGS_WAR_COLLEGE_S:0 "陸軍大学校"
+ BUILDINGSLEDGER_BUILDINGS_WAR_COLLEGE_L:0 "陸軍大学校は、陸軍伝統を毎年増加させます。海軍本部のある州には建設できません。緑色のチェックは、陸軍大学校のある州を表しています。"
  BUILDINGSLEDGER_BUILDINGS_ADMIRALTY_S:0 "海軍本部"
- BUILDINGSLEDGER_BUILDINGS_ADMIRALTY_L:0 "海軍本部は、海軍の伝統を毎年増加させます。海軍本部は将校養成学校のある州には建設できません。緑色のチェックは海軍本部のある州を表しています。"
+ BUILDINGSLEDGER_BUILDINGS_ADMIRALTY_L:0 "海軍本部は、海軍伝統を毎年増加させます。陸軍大学校のある州には建設できません。緑色のチェックは海軍本部のある州を表しています。"
  BUILDINGSLEDGER_BUILDINGS_CUSTOMS_HOUSE_S:0 "税関"
  BUILDINGSLEDGER_BUILDINGS_CUSTOMS_HOUSE_L:0 "税関は、地方税をわずかに増加させます。緑色のチェックは州に税関があることを示します。"
  ARMY_REGIMENTSLEDGER_O-SHOCK_S:0 "攻撃側白兵値"
@@ -2775,7 +2775,7 @@
  normal:0 "普通"
  hard:0 "難しい"
  very_hard:0 "非常に難しい"
- TRIGGER_OVERLORD:0 "領主"
+ TRIGGER_OVERLORD:0 "主君"
  LEDGER_SUPPLY_LIMIT:0 "供給限界"
  LEDGER_COLONIAL_RANGE:0 "最大植民範囲"
  MODIFIER_COLONIAL_RANGE:0 "植民範囲"
@@ -3090,7 +3090,7 @@
  building_march_building:0 "辺境伯"
  building_grain_depot:0 "穀物拠点"
  building_royal_palace:0 "王宮"
- building_war_college:0 "将校養成学校"
+ building_war_college:0 "陸軍大学校"
  building_admiralty:0 "海軍本部"
  building_fort_15th:0 "城"
  building_fort_16th:0 "砦"
@@ -3385,7 +3385,7 @@
  textile_short:0 "織物"
  trade_company_short:0 "交易会社"
  university_short:0 "大学"
- war_college_short:0 "将校養成学校"
+ war_college_short:0 "陸軍大学校"
  weapons_short:0 "武器"
  wharf_short:0 "海軍機器"
  workshop_short:0 "工房"
@@ -4039,8 +4039,8 @@
  HAVE_LAND_MAINTENANCE_UNDER:0 "陸軍維持費が右記未満である："
  HAVE_NAVAL_MAINTENANCE_OVER:0 "海軍維持費が右記より多い："
  HAVE_NAVAL_MAINTENANCE_UNDER:0 "海軍維持費が右記未満である："
- HAVE_ARMY_TRADITION_UNDER:0 "陸軍の伝統が右記未満である："
- HAVE_ARMY_TRADITION_OVER:0 "陸軍の伝統が右記以上である："
+ HAVE_ARMY_TRADITION_UNDER:0 "陸軍伝統が右記未満である："
+ HAVE_ARMY_TRADITION_OVER:0 "陸軍伝統が右記以上である："
  HAVE_NAVAL_TRADITION_UNDER:0 "海軍の伝統が右記未満である："
  HAVE_NAVAL_TRADITION_OVER:0 "海軍の伝統が右記以上である："
  HAVE_TRADE_EFFICIENCY_UNDER:0 "交易効率が右記未満である："
@@ -7044,7 +7044,7 @@
  CASUS_BELLI:0 "開戦事由"
  CARDINAL_CHANCE:0 "枢機卿への可能性"
  NAVAL_LABEL:0 "海軍の伝統："
- ARMY_LABEL:0 "陸軍の伝統："
+ ARMY_LABEL:0 "陸軍伝統："
  HRE_MAJORITY:0 "ほとんどの神聖ローマ帝国加盟国"
  ICON_RELIGIOUS_UNITY:0 "§Y宗教的団結§Wへの要求"
  BORN_IN:0 "$COUNTRY$生まれ。"
@@ -7422,7 +7422,7 @@
  EMBARGOSUBJECT:0 "従属国であるため、禁輸を行うことはできません。"
  EMBARGOOVERLORD:0 "従属国に禁輸を行うことはできません。"
  tut_1c_30:0 "文化タブ"
- tut_1c_31:0 "画面上部には、あなたの国の文化、海軍、軍隊の伝統がどれくらいあるかが表示されます。その下に、各顧問の種類のボタンがあります。伝統を費やすことによって、必要なアドバイザーを募集し、宮廷のビューで雇用することができます。あなたの新しい顧問の能力は、どれだけの伝統を持っているかによって異なります。"
+ tut_1c_31:0 "画面上部には、あなたの国の文化伝統・海軍伝統・陸軍伝統がどれくらいあるかが表示されます。その下に、各顧問の種類のボタンがあります。伝統を費やすことによって、必要なアドバイザーを募集し、宮廷のビューで雇用することができます。あなたの新しい顧問の能力は、どれだけの伝統を持っているかによって異なります。"
  tut_1c_32:0 "以下は、あなたの文化的伝統を高めるために使用できるいくつかの文化的な決断であり、いくつかは他の効果もあります。"
  tut_1c_33:0 "ミッションと決断タブ"
  tut_1c_34:0 "このタブの上部にはあなたの現在のミッションに関する情報があり、ミッションを達成する必要はありませんが、そうすることであなたの国にいくつかのボーナスが与えられます。下には、いくつかの利点を得るために取ることができるいくつかの国家の決断があります。"
