--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -365,7 +365,7 @@
  WESLAVERAID_1:0 "海岸襲撃！"
  WESLAVERAID_2:0 "我が艦隊は£icon_sailors£を補充し、金を略奪するために$WHERE$の海岸を急襲しました。"
  WESLAVERAID_3:0 "我々は$SAILORS$£icon_sailors£と$CASH$¤を得ました。"
- WESLAVERAID_4:0 "彼らの我々に対する評価が$OPINION_HIT$変化しました。"
+ WESLAVERAID_4:0 "彼らの我々への評価が$OPINION_HIT$変化しました。"
  WESLAVERAID_6:0 "我々はこれらの奴隷をうまく利用します。"
  WESLAVERAID_LOG:0 "$WHERE$で$SAILORS$£icon_sailors£と$CASH$¤を襲撃"
  WESLAVERAID_BTN1:0 "OK"
@@ -1369,9 +1369,9 @@
  SUPPORTREBELSME_SETUP:0 "我々が他国での反乱を支援したとき"
  SUPPORTREBELSME_HEADER:0 "$MESSENGER$"
  SUPPORTREBELSME_1:0 "反乱軍を支援"
- SUPPORTREBELSME_2:0 "$MONARCHTITLE$、我々は以下に支援しました。"
- SUPPORTREBELSME_3:0 "$FACTION$"
- SUPPORTREBELSME_4:0 "彼らの抑圧者である$RECIPIENT$に対する勇ましい闘争に。"
+ SUPPORTREBELSME_2:0 "$MONARCHTITLE$、我々は"
+ SUPPORTREBELSME_3:0 "$FACTION$の"
+ SUPPORTREBELSME_4:0 "抑圧者たる$RECIPIENT$に対する勇ましい闘争を支援しています。"
  SUPPORTREBELSME_LOG:0 "$RECIPIENT$の$FACTION$を支援"
  SUPPORTREBELSME_BTN1:0 "OK"
  SUPPORTREBELSME_BTN2:0 "OK"
@@ -2905,7 +2905,7 @@
  WETAKEONDEBT_HEADER:0 "$MESSENGER$"
  WETAKEONDEBT_1:0 "対外債務の引き受け"
  WETAKEONDEBT_2:0 "$MONARCHTITLE$、小国の$RECIPIENT$のために"
- WETAKEONDEBT_3:0 "対外債務$COST|Y$¤ を"
+ WETAKEONDEBT_3:0 "対外債務$COST|Y$¤を"
  WETAKEONDEBT_4:0 "引き受けます。彼らは今、財政的苦境から解放されました。"
  WETAKEONDEBT_6:0 "彼らが我々を称賛するのは疑いありません。"
  WETAKEONDEBT_LOG:0 "$RECIPIENT$の対外債務をすべて返済"
