Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -305,7 +305,7 @@
  ab_warscore_vs_religion:0 "宗教戦争"
  ab_mercenary_discipline:0 "傭兵規律"
  splendor:0 "栄光"
- feudal_de_jure_law:1 "州の布告「§Y封建的慣習法§!」が可能になります。\n （不穏度：§G-5§!）\n"
+ feudal_de_jure_law:1 "州の布告「§Y封建的慣習法§!」が可能になります。\n（不穏度：§G-5§!）\n"
  religion_enforced_edict:2 "州の布告「§Y宗教の強制§!」が可能になります。\n（宗教改革への抵抗：§G+100%§!）\n"
  edict_of_absolutism_tt:1 "州の布告「§Y絶対主義の布告§!」が可能になります。\n（月間荒廃度：§G-0.25§!）\n"
  in_golden_era:0 "§Y黄金時代§!"
@@ -4151,7 +4151,7 @@
  penal_colony:0 "流刑地"
  desc_penal_colony:0 "植民地の発展を助けるために、泥棒、債務者、その他の犯罪者たちが、開発に取り組むことで社会に代償を支払うため、ここに送られた。"
  random_event.EVTNAME23:0 "インフルエンザ！"
- random_event.EVTDESC23:1 "噂では、船員たちが船旅から地獄のような病気を持ち帰っており、船の上で死ななければ、[Root.GetCapitalName]全体が彼らの病気で覆われるだろうと言われている。咳と冷たい汗で国全体が死ぬ前に行動する時だ。"
+ random_event.EVTDESC23:1 "噂によると、船員たちが凶悪な病気にかかって船旅から戻り、船の上で死ななかった者が[Root.GetCapitalName]全体に病気を蔓延させたという。国全体が咳と冷や汗で死ぬ前に行動する時だ。"
  random_event.EVTOPTA23:0 "船を隔離して、彼らを死なせるのだ！"
  random_event.EVTOPTB23:0 "インフルエンザはこれが初めてではない、気にするな！"
  influenza_spreads:0 "最終的に、インフルエンザは近隣の州へ広がるだろう…"
@@ -4422,13 +4422,13 @@
  EXTRA_BONUS_GOOD_SMALL_FACT:0 "\n戦力投射$VAL|Y$以上のため：\n"
  EXTRA_BONUS_GOOD:0 "戦力投射を$MAX$以上持っている場合\n +1 £adm£\n +1 £dip£\n +1 £mil£を獲得します"
  EXTRA_BONUS_GOOD_FACT:0 "\n戦力投射$VAL|Y$以上のため："
- POWERPROJ_GOOD:0 "§G+1§!£adm£\n§G+1§!£dip£\n§G+1§!£mil£"
+ POWERPROJ_GOOD:0 "§G+1§! £adm£\n§G+1§! £dip£\n§G+1§! £mil£"
  POWERPROJ_HOWTO_GAIN:0 "ライバルを打ち負かすことで戦力投射が獲得できます：\n§Y- 彼らに対する戦争に参加する。\n- 彼らの州を獲得するか彼らを属国化する。\n- 彼らを侮辱するか屈辱を与える。\n- 彼らの土地で反乱軍を支援する。\n- 彼らの商人に対し禁輸する。§!"
- INLAND_BONUS:0 "内陸のボーナス"
+ INLAND_BONUS:0 "内陸ボーナス"
  GO_HOME_AT_WAR:0 "戦争中\n帰港する"
  CANT_DETACH_WHILE_MOVING:0 "退却している間は船を切り離すことはできません。"
- CANT_DETACH_NO_OBSOLETE:0 "すべての船は最新です。"
- CANT_DETACH_ALL_OBSOLETE:0 "それらはすべて時代遅れであるので、すべての船を切り離します。"
+ CANT_DETACH_NO_OBSOLETE:0 "すでにすべての船が最新になっています。"
+ CANT_DETACH_ALL_OBSOLETE:0 "そうすれば、すべての船が時代遅れとなり、切り離されることになってしまいます。"
  NO_SPOILS:0 "戦利品を得ていません。"
  CONFIRM_NEW_DEITY_TITLE:0 "新たな主神の確認"
  CONFIRM_NEW_DEITY_DESC:0 "新しい神として$NAME|Y$への信仰を開始しますか？"
