--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -875,7 +875,7 @@
  subject_interaction_events.4.b:0 "国に混乱をもたらすだけだ。そのままにしておけ。"
  subject_interaction_events.5.t:0 "有能な親族"
  subject_interaction_events.5.d:0 "改革が行われ、無能な閣僚や顧問が解雇され、陸軍と海軍はこれまでにないほどより良いものとなっている…まるで我々の親族が従属国をしっかりした手で支配し、有能な決断をしているように見える。"
- subject_interaction_events.5.a:0 "我々が今まで疑問を持っていたとすれば、それらは今は忘れられている。"
+ subject_interaction_events.5.a:0 "もし我々が疑念を持っていたとしても、今では忘れている。"
  subject_interaction_events.6.t:0 "親族が[Root.Country.GetName]の地位を主張"
  subject_interaction_events.6.d:0 "[Root.Country.GetName]の王座に対する我々の弱い支配は、我々の親族の主張をより強くし、腐った私生子は王位が彼らのものであるべきだと主張している！我々の親族を解任するのは簡単だが、彼らの主張を取り下げるために買収できるのであれば、平和のためにはより良いだろう。"
  subject_interaction_events.6.a:0 "我々の親族を解任する！"
@@ -956,7 +956,7 @@
  subject_interaction_events.23.a:0 "被害を元に戻すことを試みる。"
  subject_interaction_events.23.b:0 "我々にできることは何もない。"
  subject_interaction_events.24.t:0 "粗野な士官の残酷な行動"
- subject_interaction_events.24.d:0 "「多くの小さな川が大きな洪水を生む」残念なことに、我々の保護国でその真実が証明されたことわざである。国が我々の保護国となった時からの古い抗議と苦い思い出と一緒に、我々にはほとんど気づかれず、しかし、目撃し晒された人たちには大きな侮辱となった、小さな出来事が最終的なきっかけとなった。我々が派遣した士官の嘆かわしい、いや、残酷な行動は、我々と保護国との間に亀裂と悪い関係をもたらした。"
+ subject_interaction_events.24.d:0 "「塵も積もれば山となる」－残念なことに、我々の保護国でその真実が証明されたことわざである。我々にとってはほとんど気づかないような些事だが、それを目撃したり晒された者たちにとっては大きな侮辱であり、この国が我々の保護国となったときからの古い不満や苦い思い出とともに、最後の一撃となった。我々が派遣した士官たちの嘆かわしい、いや、残酷な振る舞いが、我々と保護国との間に亀裂を生み、関係を悪化させた。"
  subject_interaction_events.24.a:0 "我々は士官に紳士となる方法を教える必要がある！"
  subject_interaction_events.25.t:0 "紳士と士官"
  subject_interaction_events.25.d:0 "彼らが我々の保護国の一つで軍の指導者として働くため我々の国を去る前に、すべての士官たちの心に刻もうとした行動規範は、時間の無駄ではなかったかもしれない。我々は、これらの士官が示している行動や厳しい規律がいかに印象的であるかを賞賛する書簡を受け取った。我々は全国的に、紳士たちを我々の士官から輩出することができたことを誇りに思うべきだ。"
