--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -240,7 +240,7 @@
  alert_corruption_high_instant:0 "§Y汚職が非常に高い§!"
  alert_corruption_high_delayed:0 "詐欺と贈収賄は今やあなたの政府の代名詞です。高価ではありますが、あなたはそれを根絶する必要があります！"
  corruption_event.1.t:0 "[Root.GetName]のまじめな商人"
- corruption_event.1.d:0 "多くの交易商は、不正な国家や外国と同様に、商品の品質について嘘をつき、不正な約束をしていることで知られているが、[Root.GetAdjective]の商人たちは競争的ではあるものの、信頼できる者としてよく知られている。彼らは時に交易相手ではなく自分自身に利益をもたらす契約を結ぶことがあるかもしれないが、めったに嘘をつくことも、賄賂を受けることもない。これにより、我々は世界中の交易商の最良の選択肢となっている。"
+ corruption_event.1.d:0 "多くの交易商は、同国人や外国人も同様にだましたり、商品の品質について嘘をついたり、詐欺的な約束をすることで知られているが、[Root.GetAdjective]の商人たちは競争的ではあるものの、信頼できる者としてよく知られている。彼らは時に交易相手ではなく自分に有利な契約を結ぶことはあっても、嘘をついたり賄賂を受けることはほとんどない。これにより、我々は世界中の交易商の中で第一候補となっている。"
  corruption_event.1.a:0 "どうして最高の提案ができるのに嘘をつく必要があるのかね。"
  corruption_event.2.t:0 "隣人を信じる"
  corruption_event.2.d:0 "市民には、取引において信頼と誠意を示すことが求められているものだが、多くの国では、まともに受け取り難いリスクであるのが現実だ。しかし、[Root.GetName]では違う。我々は社会のさまざまな分野で腐敗の打破に成功した。人々は、役人を当てにするのに賄賂の助けを必要としないし、一般的な取引でも互いを信頼している。他人が誠実であるという皆の信念は、まさに社会を織り上げる糸であり、我が国はその輝かしい見本である。"
