--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1084,7 +1084,7 @@
  church_estate_events.3.d:0 "他の階級よりも、$ESTATE_CHURCH$の影響力は一般の人々との立場に依存している。その理由を明確に指摘するのは難しいが、近年、$ESTATE_CHURCH$は、我が国の精神的な保護者とは見られなくなり、代わりに豊かで腐敗した陰謀を企てる者として見られるようになった。$ESTATE_CHURCH$の財産自体への適切でない投資に加え、貧弱な政治工作によって、$ESTATE_CHURCH$は権力と影響力の双方を失った。"
  church_estate_events.3.a:0 "OK"
  church_estate_events.4.t:0 "反教権主義"
- church_estate_events.4.d:0 "主要都市の$ESTATE_BURGHERS$が、$ESTATE_CHURCH$は欲深く怠惰であると非難している。敬虔な平民たちは、権威を悪用する最悪の見本である$ESTATE_CHURCH$に対する抗議として、十分の一税の支払いを保留している。敬虔な$ESTATE_BURGHERS$は、$ESTATE_CHURCH$には受け取る資格はないと考えているので、$ESTATE_CHURCH$への十分の一税の支払いに反対している。\n$ESTATE_CHURCH$は猛烈に怒り、強情な$ESTATE_BURGHERS$に罰金を科すよう要求している。"
+ church_estate_events.4.d:0 "主要都市の$ESTATE_BURGHERS$が、$ESTATE_CHURCH$は貪欲で怠惰であると非難している。敬虔な庶民たちは、権威を悪用する最悪の見本である$ESTATE_CHURCH$に対する抗議として、十分の一税の支払いを保留している。敬虔な$ESTATE_BURGHERS$は、$ESTATE_CHURCH$には受け取る資格はないと考えているので、$ESTATE_CHURCH$への十分の一税の支払いに反対している。\n$ESTATE_CHURCH$は猛烈に怒り、強情な$ESTATE_BURGHERS$に罰金を科すよう要求している。"
  church_estate_events.4.a:0 "我々は彼らに支払わせなければならない！"
  church_estate_events.4.b:0 "穏やかな叱責で十分だろう。"
  church_estate_events.5.t:0 "$ESTATE_CHURCH$との関係悪化"
@@ -1128,7 +1128,7 @@
  nobles_estate_events.3.a:0 "大目に見よう。"
  nobles_estate_events.3.b:0 "土地を返すよう要求する。"
  nobles_estate_events.4.t:0 "専制的な貴族たち"
- nobles_estate_events.4.d:0 "$ESTATE_NOBLES$の最も著名な一族の一人が支配する地域に住む人々の代表は、今日、彼がそこにいる人々に対する組織的な搾取であると主張するものに対して[Root.Monarch.GetTitle]が行動を起こすことを嘆願するため、王位に近づいてきた。[Root.GetName]の[Root.Monarch.GetName]の支配者は人々を守る責任があり、そうしなければ、我々は弱く見え、その地域の長期的成長に害を与える可能性がある。$ESTATE_NOBLES$は、しかし、そのような強力な一員への叱責をすんなり受け入れることはないだろう。"
+ nobles_estate_events.4.d:0 "最も有力な$ESTATE_NOBLES$の一族の一人が支配する地域に住む人々の代表が、そこの人々に対する組織的な権力の乱用であると主張する行為に対して[Root.Monarch.GetTitle]が行動を起こすよう嘆願するため、本日玉座に近づいてきた。[Root.GetName]の[Root.Monarch.GetName]の支配者は人々を守る責任があり、そうしなければ、我々は弱く見え、その地域の長期的成長に害を与える可能性がある。しかしながら$ESTATE_NOBLES$は、そのような強力な階級層の一員への叱責をすんなり受け入れることはないだろう。"
  nobles_estate_events.4.a:0 "見て見ぬふりをしよう。"
  nobles_estate_events.4.b:0 "地主を厳しく非難する。"
  nobles_estate_events.5.t:0 "$ESTATE_NOBLES$の権力の減少"
@@ -1204,7 +1204,7 @@
  burghers_estate_events.9.a:0 "進歩を妨げるわけにはいかない。"
  burghers_estate_events.9.b:0 "ギルドの特権を保護しなければならない。"
  burghers_estate_events.10.t:0 "社会的流動性"
- burghers_estate_events.10.d:0 "$ESTATE_BURGHERS$の権力の成長は、伝統的に他の集団が支配していた地域において、自分たちの幸運を追求しようとするそれらの階級の人々へとつながっている。$ESTATE_BURGHERS$の中位から下位の子息たちは、今より多くの特権階級に対応するための教育と野心を持っており、その結果、統治者、弁護士、士官だけでなく、その他伝統的に別の階級が占めていた地位にも雇用されるようになっている。$ESTATE_BURGHERS$は、彼らが時代遅れの古い権利と特権によって過度に後退していると感じているが、彼らの敵は現在の「不自然な」社会的流動性に対し、非常にうんざりしている。\n我々が何かをしない限り、特権階級の支持が失われる危険があるが、この時点で$ESTATE_BURGHERS$への支持を撤回すれば、これは我々の関係に深刻な影響を与えるだろう。"
+ burghers_estate_events.10.d:0 "$ESTATE_BURGHERS$の権力の成長は、その階級の中から、伝統的に他の集団が占めていた分野に対して出世を目指す者が出てくることになった。$ESTATE_BURGHERS$の中位から下位の名家の子息たちは、今や特権階級に匹敵する教育と野心を持っており、その結果、行政官僚、弁護士、士官といった、伝統的に別の階級が占めていた地位にも雇用されるようになっている。$ESTATE_BURGHERS$は、彼らが時代遅れの古い権利と特権によって不当に抑圧されていると感じているが、彼らの敵対者は現在の「不自然な」社会的流動性に対し、非常にうんざりしている。\n我々が何かをしない限り、特権階級の支持が失われる危険があるが、この時点で$ESTATE_BURGHERS$への支持を撤回すれば、これは我々の関係に深刻な影響を与えるだろう。"
  burghers_estate_events.10.a:0 "我々はこれらの新しい人々の邪魔をするべきではない。"
  burghers_estate_events.10.b:0 "我々は他の階級の古い権利を保護する必要がある。"
  burghers_estate_events.11.t:0 "経済の成長"
@@ -1394,7 +1394,7 @@
  cossack_estate_events.12.d:1 "国家、とりわけ[Root.Monarch.GetTitle]に対するコサックの根深い不信はついにステップにおける権勢の完全な崩壊という結果に結びついた。コサックの共同体は公然と我らの使者と敵対し、事実上中央の権力からは完全に独立して活動している。"
  cossack_estate_events.13.b:1 "コサックからの土地の返還要求"
  cossack_estate_events.16.t:1 "揺らぐコサックの忠誠"
- church_estate_events.4.d.2:0 "幾つかの名のある都市において、ヴァイシャが貪欲で怠惰な$ESTATE_CHURCH$を非難する事態が発生している。敬虔な平民は今や、$ESTATE_CHURCH$の権威を悪用するなどの特に酷い振る舞いに対しては寄付を止めることで対抗している。敬虔なヴァイシャは、$ESTATE_CHURCH$への寄付としてはあえて不適当な額を送り付けることで$ESTATE_CHURCH$に抗議している。\n$ESTATE_CHURCH$たちは激怒し、言うことを聞かないヴァイシャたちを罰金刑に処すことを我々に要求している。"
+ church_estate_events.4.d.2:0 "主要都市のヴァイシャが、$ESTATE_CHURCH$は貪欲で怠惰であると非難している。敬虔な庶民たちは、権威を悪用する最悪の見本である$ESTATE_CHURCH$に対する抗議として、十分の一税の支払いを保留している。敬虔なヴァイシャは、$ESTATE_CHURCH$には受け取る資格はないと考えているので、$ESTATE_CHURCH$への十分の一税の支払いに反対している。\n$ESTATE_CHURCH$たちは猛烈に怒り、強情なヴァイシャに罰金を科すよう要求している。"
  nobles_estate_events.6.d.1:0 "高価な服装、立派なソファ、印象に残るような邸宅は$ESTATE_NOBLES$の最たる象徴である。しかしそれらに払える金額というのは家によって大きく異なる。我が国のヴァイシャは、場合によっては平均的な貴族と同じかそれ以上の金銭的余裕を持つ。古い規則や伝統の中には貴族でない者の贅沢を制限するものも存在するが、それらを効果的に施行するのは難しい。これらの状況は我が国の強力な$ESTATE_NOBLES$たちにとって面白くないことであり、彼らは貴族でない者の権利を定める法を改正するよう我々に要求している。同時に彼らは目に見えて彼らの上を行こうとする者に対して非常に多額の罰金を科すことを勧めてきてもいる。"
  nobles_estate_events.10.d.1:0 "国家とその官僚機構は発展するものであるから、さまざまな土地や職分を監督し管理するための人材はますます必要になっている。$ESTATE_NOBLES$は伝統的に軍事的な面で国家に奉仕してきたが、官職が増え続けている現状において、さらにそれらの職にも優先的に就きたいと望んでいることが明白になってきている。一方、$ESTATE_NOBLES$はそのような任命を単なる報酬とみなし、私腹を肥やすためだけに利用するだろうとヴァイシャは主張する。代わりにヴァイシャは、個人の能力によって人を任命すべきだと主張している。\n信頼する大臣の予期せぬ死は、この対立の真っ只中に空席を残すこととなり、ヴァイシャは候補者の一人を支持し、$ESTATE_NOBLES$は我々が別の候補者を選ぶことを期待している。どちらの候補者も才能のある者だが、これは政治的な決断として行われなければならない。"
  nobles_estate_events.10.c.2:0 "代わりにバラモンに注目しよう。"
@@ -1476,7 +1476,7 @@
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
  EST_VAL_ALLIANCE_ON_VC:2 "同盟テリトリーでの勝利カード（$NAME$）: §R$VAL|1$%§!"
  FAVORS_GAIN_TOOLTIP:1 "以下の要因により毎月$VAL|+=2$の好感度を獲得します：\n$WHY$"
- FAVOR_ALLIANCE_TT:0 "同盟軍：相対的兵力：$VAL|+=2$"
+ FAVOR_ALLIANCE_TT:0 "同盟軍：相対兵力：$VAL|+=2$"
  FAVOR_ALLIANCE_BLOCKED_TT:0 "攻撃側戦争の拒否：$VAL|+=2$"
  FAVOR_CURRY_FAVORS_REP_TT:1 "外交評判：$VAL|+=2$"
  FAVOR_CURRY_FAVORS_OPINION_TT:1 "評価：$VAL|+=2$"
